    - Instances of serial.Serial have baudrate, bytesize, timeout etc.
      attributes implemented as properties, all can be set while the port is
      opened. It will then be reconfigured.
    - Improved __doc__'s.
    - New test_advanced.py for the property setting/getting testing.
    - Small bugfix on posix with get* methods (return value should be true a
      boolean).
    - added a __repr__ that returns a meaningful string will all the serial
      setting, easy for debugging.
    - The serialposix module does not throw an exception on unsupported
      platforms, the message is still printed. The idea that it may still
      work even if the platform itself s not known, it simply tries to do
      the posix stuff anyway (It's likely that opening ports by number
      fails, but by name it should work).

Version 2.0b2    4 Oct 2003
    - Added serial port configuration dialog for wxPython to the examples.
    - Added terminal application for wxPython with wxGlade design file
      to the examples.
    - Jython support is currenty broken as Jython does not have a Python 2.2
      compatible release out yet

Version 2.0      6 Nov 2003
    - Fixes setup.py for older distutils

Version 2.1     28 Jul 2004
    Bugfixes:
        - Fix XON/XOFF values [Bug 975250]
    Bugfixes (posix):
        - fd == 0 fix from Vsevolod Lobko
        - netbsd fixes from Erik Lindgren
        - Dynamicaly lookup baudrates and some cleanups
    Bugfixes (examples):
        - CRLF handling of miniterm.py should be more consistent on Win32
          and others. Added LF only command line option
        - Mutithreading fixes to wxTerminal.py (helps with wxGTK)
        - Small change for wxPython 2.5 in wxSerialConfigDialog.py [Bug 994856]
        
    New Features:
        - Implement write timeouts ('writeTimeout' parameter)


Version 2.2     XXXX
    Bugfixes (win32):
        - keep RTS/CTS state on port setting changes [Patch 983106]
